refactor: use resources and setUp method for tests
