# app/Http/Resources/CommentResource.php
@@ -6,14 +6,21 @@ use Illuminate\Http\Resources\Json\JsonResource;
 
 class CommentResource extends JsonResource
 {
-    /**
-     * Transform the resource into an array.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
-     */
-    public function toArray($request)
-    {
-        return parent::toArray($request);
-    }
+	/**
+	 * Transform the resource into an array.
+	 *
+	 * @param \Illuminate\Http\Request $request
+	 *
+	 * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+	 */
+	public function toArray($request)
+	{
+		return [
+			'id'        => $this->id,
+			'quote_id'  => $this->quote_id,
+			'user_id'   => $this->user_id,
+			'body'      => $this->body,
+			'author'    => $this->author,
+		];
+	}
 }
