# app/Http/Resources/MovieResource.php
@@ -23,14 +23,14 @@ class MovieResource extends JsonResource
 			'slug'            => $this->slug,
 			'thumbnail'       => $this->thumbnail,
 			'income'          => $this->income,
-			'release_date'    => $this->release_date,
+			'release_date'    => (int)$this->release_date,
 			'user_id'         => $this->user_id,
 			'created_at'      => $this->created_at,
 			'updated_at'      => $this->updated_at,
 			'thumbnail'       => $this->thumbnail,
 			'author'          => new UserResource($this->author),
 			'quotes'          => QuoteResource::collection($this->whenLoaded('quotes')),
-			'genres'          => GenreResource::collection($this->genres),
+			'genres'          => GenreResource::collection($this->whenLoaded('genres')),
 		];
 	}
 }
