# app/Http/Resources/NotificationResource.php
@@ -6,14 +6,25 @@ use Illuminate\Http\Resources\Json\JsonResource;
 
 class NotificationResource extends JsonResource
 {
-    /**
-     * Transform the resource into an array.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
-     */
-    public function toArray($request)
-    {
-        return parent::toArray($request);
-    }
+	/**
+	 * Transform the resource into an array.
+	 *
+	 * @param \Illuminate\Http\Request $request
+	 *
+	 * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+	 */
+	public function toArray($request)
+	{
+		return [
+			'id'          => $this->id,
+			'user_id'     => $this->user_id,
+			'recipient_id'=> $this->recipient_id,
+			'quote_id'    => $this->quote_id,
+			'type'        => $this->type,
+			'state'       => $this->state,
+			'created_at'  => $this->created_at,
+			'sender'      => $this->sender,
+			'quote'       => $this->quote,
+		];
+	}
 }
