# app/Http/Resources/QuoteResource.php
@@ -16,17 +16,17 @@ class QuoteResource extends JsonResource
 	public function toArray($request)
 	{
 		return [
-			'id'                   => $this->id,
-			'user_id'              => $this->user_id,
-			'movie_id'             => $this->movie_id,
-			'body'                 => $this->getTranslations('body'),
-			'thumbnail'            => $this->thumbnail,
-			'author'               => new UserResource($this->author),
-			'movie'                => new MovieResource($this->movie),
-			'likes'                => LikeResource::collection($this->likes),
-			'comments'             => CommentResource::collection($this->comments)->with('author'),
-			'created_at'           => $this->created_at,
-			'updated_at'           => $this->updated_at,
+			'id'        => $this->id,
+			'user_id'   => $this->user_id,
+			'movie_id'  => $this->movie_id,
+			'body'      => $this->getTranslations('body'),
+			'thumbnail' => $this->thumbnail,
+			'author'    => new UserResource($this->author),
+			'movie'     => new MovieResource($this->movie),
+			'likes'     => LikeResource::collection($this->likes),
+			'comments'  => CommentResource::collection($this->comments),
+			'created_at'=> $this->created_at,
+			'updated_at'=> $this->updated_at,
 		];
 	}
 }
